# laboratory

./: CMakeLists.txt  README.md  action.cpp  action.h  blockbuster.cpp  blockbuster.h  cast.cpp  cast.h  main.cpp  movie.cpp  movie.h  movie_interface.h  romCom.cpp  romCom.h  romance.cpp  romance.h  sciFy.cpp  sciFy.h  terminal_interface.cpp  terminal_interface.h  thriller.cpp  thriller.h
